--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="Pažnja svim muškarcima">
 <meta property="og:description" content="50% popusta">
-<meta property="og:image" content="https://i.imgur.com/xlWBbBP.jpg">
+<meta property="og:image" content="https://i.imgur.com/w2eq9Qd.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
